--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+       <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>八年级历史第一单元时间轴</title>
-    <link title="timeline-styles" rel="stylesheet" href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
+    <!-- 引入本地 CSS 文件 -->
+    <link title="timeline-styles" rel="stylesheet" href="css/timeline.css">
     <style>
         form {
             margin-top: 20px;
