--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="timeline-embed"></div>
 
     <!-- 引入 jQuery 库，TimelineJS 依赖 jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="jquery-3.7.1.min.js"></script>
     <!-- 引入 TimelineJS 的 JavaScript 文件 -->
     <script src="timeline.js"></script>
     <script>
