--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <link rel="stylesheet" href="styles.css">
     <!-- 链接 TimelineJS 的 CSS 文件 -->
     <link rel="stylesheet" href="timelin.css">
+    <!-- 引入 jQuery 库 -->
+    <script src="jquery-3.7.1.min.js"></script>
+    <!-- 引入 TimelineJS 的 JavaScript 文件 -->
+    <script src="timeline.js"></script>
 </head>
 
 <body>
     <!-- 创建时间轴容器 -->
     <div id="timeline-embed"></div>
-
-    <!-- 引入 jQuery 库，TimelineJS 依赖 jQuery -->
-    <script src="jquery-3.7.1.min.js"></script>
-    <!-- 引入 TimelineJS 的 JavaScript 文件 -->
-    <script src="timeline.js"></script>
     <script>
         const options = {
             source: 'history-timeline.json',
